--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    body {
+      margin: 0;
+    }
+    virtual-scroller {
+      max-width: 430px;
+      max-height: 100vh;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    virtual-scroller > div {
+      box-shadow: inset 0 -1px rgba(0, 0, 0, 0.1);
+      display: flex;
+      align-items: center;
+      padding: 0 12px;
+      height: 80px;
+    }
+    /* virtual-scroller > div:hover {
+      background: #333336;
+      color: #fff;
+    } */
+    virtual-scroller img {
+      width: 40px;
+      margin-right: 12px;
+    }
+    virtual-scroller .phone {
+      font-size: 80%;
+      color: rgb(32, 154, 235);
+      margin-top: 5px;
+      text-decoration: none;
+    }
+    virtual-scroller .even {
+      /* height: 120px; */
+    }
+  </style>
 </head>
 <body>
   <virtual-scroller></virtual-scroller>
